test/deca/syntax/invalid/ifthenelse_else_incomplet_1.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 10 : Erreur (manque crochet fermant)

{
    if (true) {
        
    } else {

}